newtype-tools/tests/trybuild/newtype/named-struct.stderr
error: expected `struct Newtype(inner_type)`
 --> tests/trybuild/newtype/named-struct.rs:2:16
  |
2 |   struct Oranges {
  |  ________________^
3 | |     inner: u32,
4 | | }
  | |_^
