newtype-tools/tests/trybuild/newtype/named-struct.rs
#[derive(newtype_tools::Newtype)]
struct Oranges {
    inner: u32,
}

fn main() {}
